# sqlite-package-manager

./: .gitignore  Cargo.toml  README.md  docs.md  spm.toml
examples/simple/: spm.toml  test.sql
src/: execution.rs  http.rs  main.rs  package_management.rs  spm.rs
