[package]
name = "spm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version="4.1.8", features=["derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.7.2"
url = "2.3.1"
ureq = {version="2.6.2", features=["json"]}
flate2 = "1.0.25"
tar = "0.4.38"
toml_edit = "0.19.8"
anyhow = "1.0"
